version/0.26/_sources/api/solver/_autosummary/settings/fieldview_unstruct_data.rst.txt
:orphan:

.. _fieldview_unstruct_data:

fieldview_unstruct_data
=======================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.fieldview_unstruct_data.fieldview_unstruct_data
    :show-inheritance:

.. rubric:: Arguments

==========================================   ============================================

Argument                                                                          Summary

==========================================   ============================================
:ref:`file_name <file_name_1>`                     Enter the desired file name to export.

:ref:`surfaces <surfaces_1>`                                  List of surfaces to export.

:ref:`cellzones <cellzones>`                                List of cell zones to export.

:ref:`cell_func_domain <cell_func_domain>`       Select the list of quantities to export.

==========================================   ============================================

.. rubric:: Included in:

======================   ===============================

Parent                                           Summary

======================   ===============================
:ref:`export <export>`       Allows you to export files.

======================   ===============================

